--- a/WebApp/src/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/src/WebApp/Views/Home/Index.cshtml
@@ -2,108 +2,250 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
-                    <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=518007">Gulp</a> and <a href="http://go.microsoft.com/fwlink/?LinkId=518004">Bower</a> for managing client-side libraries</li>
-            <li>Theming using <a href="http://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699562">Add an appsetting in config and access it in app.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699318">Add client packages using Bower.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run & Deploy</h2>
-        <ul>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
+<!--my marquee recent news starts-->
+<div class="container">
+
+    <div class="mark-news">
+        <div class="row">
+            <div class="col-md-3 col-sm-3" style="height:50px;">
+                <h4>Recent Searches</h4>
+            </div>
+            <div class="col-md-9 col-sm-9" style="height:50px;">
+                <marquee scrollamount="5" onmouseover="this.stop();" onmouseout="this.start();">
+                    <ul class="m-t-5">
+                        <li>
+                            <a href="">
+
+                                PHP Developer [Full-Time] at XYZ company
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                PHP Developer [Full-Time] at XYZ company
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+
+                                PHP Developer [Full-Time] at XYZ company
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+
+                                PHP Developer [Full-Time] at XYZ company
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                PHP Developer [Full-Time] at XYZ company
+                            </a>
+                        </li>
+                    </ul>
+                </marquee>
+            </div>
+        </div>
     </div>
 </div>
+<!--my marquee recent news ends-->
+<!-- mainHomepage content starts -->
+<div class="container">
+    <div class="row myrow">
+
+        <!-- filter area starts -->
+        <div class="col-md-3 p-t-14">
+            <h4 class="my_recom_title">Customize your filter?</h4>
+            <hr class="myhr">
+
+            <form role="form" class="my_form">
+
+                <div class="form-group">
+                    <label>
+                        Search For this keyword for Job
+                    </label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label>
+                        In the Location
+                    </label>
+                    <input type="text" class="form-control ">
+                </div>
+
+                <h4 class="m-t-34 pcolor">Filter By</h4>
+
+                <div class="form-group">
+                    <label>
+                        Company
+                    </label>
+
+
+                    <select name="choose category" id="input" class="form-control" required="required" placeholder="choose" value="choose category">
+                        <option>Choose Category <i class="fa fa-facebook">    </i></option>
+                        <option>Software Company</option>
+                        <option>Bank</option>
+                        <option>School/College</option>
+                        <option>Government</option>
+                    </select>
+
+                </div>
+                <div class="form-group">
+                    <label>
+                        Choose Salary
+                    </label>
+                    <select class="form-control">
+                        <option>10000-20000</option>
+                        <option>20000-30000</option>
+                        <option>30000-40000</option>
+                        <option>40000-50000</option>
+                        <option>50000-60000</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label>
+                        Choose Job Type
+                    </label>
+                    <select class="form-control">
+                        <option>Beginner</option>
+                        <option>Intermediate</option>
+                        <option>Professional</option>
+
+                    </select>
+
+                    <!--  <div class="form-group">
+                                <label>
+                                    <input type="checkbox">
+                                    Remember
+                                </label>
+                            </div>
+                             -->
+                    <div class="form-group">
+                        <label>
+                            <input type="submit" class="btn btn-default m-t-14" value="Search">
+
+                        </label>
+
+                    </div>
+
+                </div>
+
+
+
+            </form>
+
+            <h4 class="my_recom_title">Employer of the month</h4>
+            <hr class="myhr">
+            <!-- <img src="../../static/webapp/content/images/top.png" class="img-responsive" alt="Image"> -->
+            <ul class="top_employer"></ul>
+
+        </div>
+        <!-- filter area ends -->
+
+        <div class="col-md-9">
+
+            <h3 class="my_recom_title">Recommended Jobs <span>based on your profile </span></h3>
+            <hr class="myhr">
+
+            <!-- recommended jobs area starts -->
+            <ul id="myList">
+                <li style="display: list-item;">
+                    <div class="box">
+                        <div class="thumb">
+                            <a href="#"><img src="http://placehold.it/50x50" alt="img" style="max-height:50px;"></a>
+                        </div>
+                        <div class="text-col">
+                            <h4><a href="#">Django Developer[Full-Time] </a></h4>
+                            <p>Verisk Information Technology </p>
+                            <!--                             <div id="my_star">
+
+                                                            <ul>
+                                                        <li><img src="../../static/webapp/content/images/star-on.png" class="" alt="Image"></li>
+                                                        <li><img src="../../static/webapp/content/images/star-on.png" class="" alt="Image"></li>
+                                                        <li><img src="../../static/webapp/content/images/star-on.png" class="" alt="Image"></li>
+                                                        <li><img src="../../static/webapp/content/images/star-off.png" class="" alt="Image"></li>
+                                                        <li><img src="../../static/webapp/content/images/star-off.png" class="" alt="Image"></li>
+                                                            </ul>
+                                                        </div>
+                                                         -->
+                            <div class="star-1" title="regular">
+
+                                <img alt="1" src="images/star-on.png" title="regular">&nbsp;<img alt="2" src="images/star-on.png" title="regular">&nbsp;<img alt="3" src="images/star-on.png" title="regular">&nbsp;<img alt="4" src="images/star-off.png" title="regular">&nbsp;<img alt="5" src="images/star-off.png" title="regular">
+                                <input name="score" type="hidden" value="3" readonly="">
+                            </div>
+
+                            <a href="#" class="text"><i class="fa fa-map-marker"></i>Moorgate, London</a> <a href="#" class="text"><i class="fa fa-calendar"></i>Dec 30, 2015 - Feb 20, 2016 </a>
+                        </div>
+                        <strong class="price"><i class="fa fa-money"></i>$4000 - $5000</strong>
+                        <a href="#" class="btn-1 btn-color-1 ripple">Part Time</a>
+                    </div>
+                </li>
+                <li style="display: list-item;">
+                    <div class="box">
+                        <div class="thumb">
+                            <a href="#"><img src="http://placehold.it/50x50" alt="img" style="max-height:50px;"></a>
+                        </div>
+                        <div class="text-col">
+                            <h4><a href="#">Django Developer[Full-Time] </a></h4>
+                            <p>Verisk Information Technology </p>
+                            <a href="#" class="text"><i class="fa fa-map-marker"></i>Moorgate, London</a> <a href="#" class="text"><i class="fa fa-calendar"></i>Dec 30, 2015 - Feb 20, 2016 </a>
+                        </div>
+                        <strong class="price"><i class="fa fa-money"></i>$4000 - $5000</strong>
+                        <a href="#" class="btn-1 btn-color-1 ripple">Part Time</a>
+                    </div>
+                </li>
+                <li style="display: list-item;">
+                    <div class="box">
+                        <div class="thumb">
+                            <a href="#"><img src="http://placehold.it/50x50" alt="img" style="max-height:50px;"></a>
+                        </div>
+                        <div class="text-col">
+                            <h4><a href="#">Django Developer[Full-Time] </a></h4>
+                            <p>Verisk Information Technology </p>
+                            <a href="#" class="text"><i class="fa fa-map-marker"></i>Moorgate, London</a> <a href="#" class="text"><i class="fa fa-calendar"></i>Dec 30, 2015 - Feb 20, 2016 </a>
+                        </div>
+                        <strong class="price"><i class="fa fa-money"></i>$4000 - $5000</strong>
+                        <a href="#" class="btn-1 btn-color-1 ripple">Part Time</a>
+                    </div>
+                </li>
+                <li style="display: list-item;">
+                    <div class="box">
+                        <div class="thumb">
+                            <a href="#"><img src="http://placehold.it/50x50" alt="img" style="max-height:50px;"></a>
+                        </div>
+                        <div class="text-col">
+                            <h4><a href="#">Django Developer[Full-Time] </a></h4>
+                            <p>Verisk Information Technology </p>
+                            <a href="#" class="text"><i class="fa fa-map-marker"></i>Moorgate, London</a> <a href="#" class="text"><i class="fa fa-calendar"></i>Dec 30, 2015 - Feb 20, 2016 </a>
+                        </div>
+                        <strong class="price"><i class="fa fa-money"></i>$4000 - $5000</strong>
+                        <a href="#" class="btn-1 btn-color-1 ripple">Part Time</a>
+                    </div>
+                </li>
+                <li style="display: list-item;">
+                    <div class="box">
+                        <div class="thumb">
+                            <a href="#"><img src="http://placehold.it/50x50" alt="img" style="max-height:50px;"></a>
+                        </div>
+                        <div class="text-col">
+                            <h4><a href="#">Django Developer[Full-Time] </a></h4>
+                            <p>Verisk Information Technology </p>
+                            <a href="#" class="text"><i class="fa fa-map-marker"></i>Moorgate, London</a> <a href="#" class="text"><i class="fa fa-calendar"></i>Dec 30, 2015 - Feb 20, 2016 </a>
+                        </div>
+                        <strong class="price"><i class="fa fa-money"></i>$4000 - $5000</strong>
+                        <a href="#" class="btn-1 btn-color-1 ripple">Part Time</a>
+                    </div>
+                </li>
+
+
+
+            </ul>
+            <!-- recommended jobs area ends -->
+
+
+        </div>
+
+    </div>
+
+</div>
+<!-- mainHomepage content ends -->
