--- a/WebApp/src/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/src/WebApp/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WebApp</title>
+    <title>@ViewData["Title"] - JobSeek</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -17,19 +17,43 @@
     </environment>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    @*<div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">JobSeek</a>
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a asp-controller="Home" asp-action="Index">Home</a></li>
+                        <li><a asp-controller="Home" asp-action="About">About</a></li>
+                        <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    </ul>
+                    @await Html.PartialAsync("_LoginPartial")
+                </div>
+            </div>
+        </div>*@
+
+    <!--mynavbar starts-->
+    <div class="navbar navbar-inverse navbar-fixed-top my_navbar">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-controller="Home" asp-action="Index" class="navbar-brand">WebApp</a>
+                <a class="navbar-brand white f-s-25 p-24" href="/">Jobs.Recommender</a>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav"></ul>
+
+                <ul class="nav navbar-nav navbar-right">
                     <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
@@ -38,12 +62,33 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <!--mynavbar ends-->
+
+    <div class="">
+        <!--my content starts-->
+        <div class="my_content">
+
+            <!--main banner image starts-->
+            <div class="container-fluid p-0">
+
+                <div class="my_image" style="position:relative;">
+
+                    <!-- <img src="images/nepal.png" class="img-responsive" alt="Image" style="width:100%;"> -->
+                    <div class="myoverlay flex">
+
+                        <img src="~/images/codex_logo2.png" class="img-responsive m-t-32" alt="Image" style="max-height:130px;">
+                    </div>
+
+                </div>
+            </div>
+            <!--main banner image ends-->
+
+        </div>
+        <!--my content ends-->
+
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; 2016 - WebApp</p>
-        </footer>
+        
     </div>
 
     <environment names="Development">
@@ -65,4 +110,79 @@
 
     @RenderSection("scripts", required: false)
 </body>
+
+<!--footer starts-->
+<!--footer starts-->
+<footer id="footer" class="p-t-50 p-b-50">
+    <div class="container">
+        <div class="col-md-3">
+
+            <div class="text-box box">
+                <h4>About Jobs Alert</h4>
+                <p class="m-0">
+                    Person usually begins a job by becoming an employee, volunteering, or starting a business. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa quae. error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa quae.
+                    <br />
+
+                </p>
+            </div>
+
+        </div>
+
+        <div class="col-md-3">
+
+            <div class="box">
+                <h4>Keywords by Skills</h4>
+                <ul class="myul">
+                    <li><a href="#">Administrator</a></li>
+                    <li><a href="#">Accounts Officer</a></li>
+                    <li><a href="#">PHP Developer</a></li>
+                    <li><a href="#">UI/UX Designer</a></li>
+                    <li><a href="#">Project Manager</a></li>
+                    <li><a href="#">Public Relation Officer</a></li>
+                </ul>
+            </div>
+
+
+        </div>
+        <div class="col-md-3">
+
+            <div class="box">
+                <h4>Keywords by Skills</h4>
+                <ul class="myul">
+                    <li><a href="#">Administrator</a></li>
+                    <li><a href="#">Accounts Officer</a></li>
+                    <li><a href="#">PHP Developer</a></li>
+                    <li><a href="#">UI/UX Designer</a></li>
+                    <li><a href="#">Project Manager</a></li>
+                    <li><a href="#">Public Relation Officer</a></li>
+                </ul>
+            </div>
+
+
+        </div>
+
+        <div class="col-md-3">
+
+            <div class="box">
+                <h4>Keywords by Skills</h4>
+                <ul class="myul">
+                    <li><a href="#">Administrator</a></li>
+                    <li><a href="#">Accounts Officer</a></li>
+                    <li><a href="#">PHP Developer</a></li>
+                    <li><a href="#">UI/UX Designer</a></li>
+                    <li><a href="#">Project Manager</a></li>
+                    <li><a href="#">Public Relation Officer</a></li>
+                </ul>
+            </div>
+
+
+        </div>
+
+
+
+
+</footer>
+<!--footer ends-->
+
+
 </html>
